; ModuleID = '/home/carl/AnghaBench/vlc/modules/demux/mp4/extr_meta.c_SetupID3v2Meta.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/demux/mp4/extr_meta.c_SetupID3v2Meta.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i64 }

@.str = private unnamed_addr constant [5 x i8] c"ID32\00", align 1
@ID3TAG_Parse_Handler = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @SetupID3v2Meta to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @SetupID3v2Meta(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = call i32* @MP4_BoxGet(i32* %6, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  store i32* %7, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %20, label %10

10:                                               ; preds = %2
  %11 = load i32*, i32** %5, align 8
  %12 = call %struct.TYPE_2__* @BOXDATA(i32* %11)
  %13 = icmp ne %struct.TYPE_2__* %12, null
  br i1 %13, label %14, label %20

14:                                               ; preds = %10
  %15 = load i32*, i32** %5, align 8
  %16 = call %struct.TYPE_2__* @BOXDATA(i32* %15)
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = icmp slt i32 %18, 27
  br i1 %19, label %20, label %21

20:                                               ; preds = %14, %10, %2
  br label %36

21:                                               ; preds = %14
  %22 = load i32*, i32** %5, align 8
  %23 = call %struct.TYPE_2__* @BOXDATA(i32* %22)
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 1
  %25 = load i64, i64* %24, align 8
  %26 = inttoptr i64 %25 to i32*
  %27 = getelementptr inbounds i32, i32* %26, i64 6
  %28 = load i32*, i32** %5, align 8
  %29 = call %struct.TYPE_2__* @BOXDATA(i32* %28)
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  %32 = sub nsw i32 %31, 6
  %33 = load i32, i32* @ID3TAG_Parse_Handler, align 4
  %34 = load i32*, i32** %3, align 8
  %35 = call i32 @ID3TAG_Parse(i32* %27, i32 %32, i32 %33, i32* %34)
  br label %36

36:                                               ; preds = %21, %20
  ret void
}

declare dso_local i32* @MP4_BoxGet(i32*, i8*) #1

declare dso_local %struct.TYPE_2__* @BOXDATA(i32*) #1

declare dso_local i32 @ID3TAG_Parse(i32*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
